delete useless files

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,17 +47,17 @@
         <form class="row" action="/start" method="post">
             <!-- name -->
             <div class="col-3">
-                <label for="name">kp</label>
+                <label for="name">kc</label>
                 <input type="range" min="0" max="1" step="0.1" value="0.5" name="kc" id="kc">
             </div>
             <!-- name -->
             <div class="col-3">
-                <label for="name">ki</label>
+                <label for="name">tau I</label>
                 <input type="range" min="0" max="5" step="0.1" value="2.5" name="taul" id="taul">
             </div>
             <!-- name -->
             <div class="col-3">
-                <label for="name">kd</label>
+                <label for="name">tau D</label>
                 <input type="range" min="0" max="1" step="0.1" value="0.5" name="taud" id="taud">
             </div>
             <!-- submit -->
